--- a/Content.Client/_NF/Shipyard/UI/ShipyardConsoleMenu.xaml
+++ b/Content.Client/_NF/Shipyard/UI/ShipyardConsoleMenu.xaml
@@ -46,10 +46,16 @@
                 <!-- Vessels get added here by code -->
             </BoxContainer>
         </ScrollContainer>
-        <GridContainer Columns="3" HorizontalExpand="True" Margin="0 8 0 2">
+        <GridContainer Columns="5" HorizontalExpand="True" Margin="0 8 0 2">
             <Button Name="TargetIdButton" Access="Public"/>
             <Button Name="SellShipButton"
                 Text="Sell"
+                Disabled="True" />
+            <Button Name="SaveShipButton"
+                Text="Save Ship"
+                Disabled="True" />
+            <Button Name="LoadShipButton"
+                Text="Load Ship"
                 Disabled="True" />
             <BoxContainer Orientation="Vertical">
                 <Label Text="{Loc 'shipyard-console-deed-label'}" />
@@ -57,5 +63,11 @@
                     Text=""/>
             </BoxContainer>
         </GridContainer>
+        <BoxContainer Orientation="Vertical" HorizontalExpand="True" Margin="0 8 0 2">
+            <Label Text="Saved Ships:" />
+            <ItemList Name="SavedShipsList" 
+                      MinSize="0 100"
+                      HorizontalExpand="True" />
+        </BoxContainer>
     </BoxContainer>
 </controls:FancyWindow>
