--- a/Content.Client/_NF/Shipyard/UI/ShipyardConsoleMenu.xaml
+++ b/Content.Client/_NF/Shipyard/UI/ShipyardConsoleMenu.xaml
@@ -1,8 +1,8 @@
 <controls:FancyWindow xmlns="https://spacestation14.io"
                            xmlns:gfx="clr-namespace:Robust.Client.Graphics;assembly=Robust.Client"
                            xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-                           SetSize="640 500"
-                           MinSize="640 300">
+                           SetSize="900 500"
+                           MinSize="900 300">
     <BoxContainer Orientation="Vertical" Margin="5 0 5 0">
         <BoxContainer Orientation="Vertical">
             <BoxContainer Orientation="Horizontal">
@@ -50,7 +50,8 @@
             <Button Name="TargetIdButton" Access="Public"/>
             <Button Name="SellShipButton"
                 Text="Sell"
-                Disabled="True" />
+                Disabled="True"
+                StyleClasses="ButtonCaution" />
             <Button Name="SaveShipButton"
                 Text="Save Ship (Dino &amp; Venom Double Doc Special)"
                 Disabled="True"
